--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,7 +36,7 @@
           </li>
           <li>
             <%= link_to home_about_path,class: 'nav-link text-light' do %>
-              <i class="fa-solid fa-link"></i> About
+              <i class="fas fa-link"></i> About
             <% end %>
           </li>
           <li>
