--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,7 +17,8 @@
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
 
-          <%= render 'favo', obj: book%>
+          <td><%= render 'books/favo', obj: book%></td>
+          <td>コメント数：<%= book.book_comments.count %></td>
 
       </tr>
     <% end %>
