--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,21 +27,28 @@
             <td>コメント数：<%= @book.book_comments.count %></td>
 
         </tr>
+        </table>
         <%# コメント一覧　%>
+        <table>
         <% @book.book_comments.each do |book_comment| %>
           <tr>
             <td><%= image_tag book_comment.user.get_profile_image, size:"50x50" %><br>
-            <%= link_to book_comment.user.name, book_comment.user %></td>
+              <%= link_to book_comment.user.name, book_comment.user %>
+            </td>
+
             <td><%= book_comment.comment %></td>
-            <% if book_comment.user == current_user %>
-              <td><%= link_to "削除", book_book_comment_path(book_id: @book.id, id: book_comment.id), method: :delete, class:"btn btn-danger" %></td>
-            <% end %>
+
+            <td>
+              <% if book_comment.user == current_user %>
+                <%= link_to "削除", book_book_comment_path(book_id: @book.id, id: book_comment.id), method: :delete, class:"btn btn-danger" %>
+              <% end %>
+            </td>
           </tr>
         <% end %>
       </table>
       
       <%# コメントフォーム　%>
-      <div class='col-md-8 '>
+      
         <%= form_with model: [@book, @book_comment], local: true do |f| %>
           <% if @book_comment.errors.any? %>
             <div class="alert alert-danger">
@@ -52,10 +59,10 @@
               </ul>
             </div>
           <% end %>
-          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに", class: "w-100" %>
           <%= f.submit "送信する" %>
         <% end %>
-      </div>
+      
     </div>
   </div>
 </div>
